# ESP-Handheld

./: .gitignore  .gitmodules  1.txt  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_NOTES.md  IO口.txt  README.md  README_CN.md  YI64.md  _bf.ps1  _build.ps1  _build_home.ps1  _build_v5_4.ps1  _cap_v.py  _fix_pip.ps1  _flash.ps1  _flash_app.ps1  _flash_dualsystem.ps1  _install_tools.ps1  _manual_extract.ps1  _monitor.ps1  _monitor_long.ps1  _reinstall_toolchain.ps1  _setup_python_env.ps1  _verify.ps1  _verify_long.ps1  _verify_weather.ps1  build.bat  build_esp.ps1  calib.txt  chinese_chars.txt  crash.txt  crash2.txt  crash3.txt  fix_nes.py  gen_iching.py  idf_env.ps1  left_test.txt  (+9 more)
.github/workflows/: build.yml
3D打印/: A键.stl  B键.stl  espH.stl  esp外壳 (部件).stl  壳体.stl  底板.stl  方向键.stl  菜单键.stl
components/: lv_conf.h
components/espressif__esp_codec_dev/: .component_hash  CHECKSUMS.json  idf_component.yml
components/espressif__esp_codec_dev/platform/: audio_codec_ctrl_spi.c
components/nes_core/: CMakeLists.txt.disabled  emucore.cpp  emucore.h  mappers.h  nes_config.h  nes_palette.h  nes_port.h
components/retro-core/components/nofrendo/: CMakeLists.txt
components/retro-go/: CMakeLists.txt  config.h  rg_display.c  rg_input.c  rg_system.c  rg_system.h
components/retro-go/drivers/audio/: i2s.c
components/retro-go/drivers/display/: esp_bsp.h  ili9341.h
components/retro-go/targets/crokpocket/: config.h  env.py
components/retro-go/targets/crokpocket/docs/: README.md
components/retro-go/targets/esp-bsp-handheld/: config.h
components/retro-go/targets/nullnano/: config.h
components/retro-go/targets/nullnano/docs/: README.md
components/retro-go/targets/vmu/: config.h
components/retro-go/targets/vmu/docs/: README.md
docs/: 2026-06-05-game-firmware-progress.md  2026-06-09-pc-remote-architecture.md  API_KEYS.md  API_KEYS_CN.md  BUILD.md  BUILD_CN.md  CHANGELOG.md  FLASH.md  FLASH_CN.md  HARDWARE.md  HARDWARE_CN.md  USER_MANUAL.md  USER_MANUAL_CN.md  flash-guide.md  project-reference.md  功能使用说明.md
docs/superpowers/plans/: 2026-05-16-esp32-s3-handheld-plan.md  2026-05-17-project-progress.md
docs/superpowers/specs/: 2026-05-16-esp32-s3-handheld-design.md
docs/xiaozhi/: README.md
esp-claw-integration/: ESP-Claw使用说明.md  README.md
esp-claw-integration/boards/zistar/: board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board  setup_device.c
esp-claw-integration/patches/: main.c.start-b.patch
esp-claw-integration/reference/: partitions.csv
esp-claw-integration/tools/: flash_dual_boot.bat  flash_esp_claw.bat  switch_to_esp_handheld.bat
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/app/: app_manager.c  app_manager.h  launcher.c  launcher.h  menu.c  menu.h  rom_browser.c  rom_browser.h
main/bsp/: bsp_board.c  bsp_board.h  key_driver.h  sd_card.c  sd_card.h  st7789_driver.c  st7789_driver.h
main/modules/audio/: box_audio_codec.c  box_audio_codec.h  es7210_driver.c  es7210_driver.h  es8311_driver.c  es8311_driver.h
main/modules/iching/: iching_data.c  iching_data.h  liuren_core.c  liuren_core.h
main/modules/imu/: imu_calib.c  imu_calib.h  imu_driver.c  imu_driver.h
main/modules/nes/: font8x16.c  nes_game.c  nes_game.h  nes_wrapper.c  nes_wrapper.h
main/modules/pc_remote/: air_mouse.c  air_mouse.h  ble_hid.c  ble_hid.h  wifi_audio.c  wifi_audio.h
main/modules/power/: battery_monitor.c  battery_monitor.h
main/modules/retro_go/: rg_adapter.c  rg_adapter.h
main/modules/sensor/: aht20_driver.c  aht20_driver.h
main/modules/settings/: settings_manager.c  settings_manager.h
main/modules/spectrum/: spectrum_analyzer.c  spectrum_analyzer.h
main/modules/theme/: theme_manager.c  theme_manager.h
main/modules/time_sync/: time_sync.c  time_sync.h
main/modules/weather/: weather.c  weather.h
main/modules/wifi_manager/: wifi_bridge.cpp  wifi_bridge.h  wifi_manager.c  wifi_manager.h
main/modules/wifi_provisioning/: wifi_provisioning.c  wifi_provisioning.h
main/modules/xiaozhi/: xiaozhi_wrapper.c  xiaozhi_wrapper.h
main/ui/: display_driver.c  display_driver.h
main/ui/components/: status_bar.c  status_bar.h  theme_colors.h  weather_icon.c  weather_icon.h  weather_icons_data.c  weather_icons_data.h  weather_icons_font.c
main/ui/screens/: airmouse_screen.c  airmouse_screen.h  calib_screen.c  calib_screen.h  countdown_screen.c  countdown_screen.h  fortune_screen.c  fortune_screen.h  home_screen.c  home_screen.h  ip_input.c  ip_input.h  kbd_screen.c  kbd_screen.h  liuren_screen.c  liuren_screen.h  main_screen.c  main_screen.h  menu_screen.c  menu_screen.h  record_screen.c  record_screen.h  settings_screen.c  settings_screen.h  spectrum_screen.c  spectrum_screen.h  theme_screen.c  theme_screen.h
retro-go-firmware/: CMakeLists.txt  build_rg.ps1  partitions_4mb.csv  sdkconfig.defaults
retro-go-firmware/main/: CMakeLists.txt  launcher_integration.c  main.c
scripts/: setup.ps1  setup.sh
tools/: ESP32_Voice_Receiver.spec  README.md  Start_Voice_Receiver.vbs  gen_icons.py  install_deps.bat  pc_voice_receiver.py  run_voice_receiver.pyw  send_ip.py  test_udp.py
tools/ui/: ESP.pen  ESP1.pen
xiaozhi-esp32-main/: _build.bat  _capture.py  _check.bat  _flash.bat  _flash_full.bat  _flash_fw.bat  _log.bat  _monitor.bat  _monitor.py  build_gezipai.bat  build_log.txt  sdkconfig.defaults.gezipai
xiaozhi-esp32-main/main/: CMakeLists.txt  Kconfig.projbuild
xiaozhi-esp32-main/main/boards/gezipai/: config.h  config.json  gezipai_board.cc
xiaozhi-zistar-main/: sdkconfig.defaults
xiaozhi-zistar-main/main/: CMakeLists.txt  Kconfig.projbuild
xiaozhi-zistar-main/main/boards/zistar/: config.h  config.json  zistar_audio_codec.cc  zistar_audio_codec.h  zistar_boards.cc
